--- a/app/src/main/res/layout/activity_regestration.xml
+++ b/app/src/main/res/layout/activity_regestration.xml
@@ -268,9 +268,10 @@
                     android:layout_height="48dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@drawable/curved_button"
+                    android:background="@drawable/curved_button_black"
                     android:onClick="InRegistration"
                     android:text="create account"
+                    android:textColor="#FFFFFF"
                     android:textSize="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
