--- a/app/src/main/res/layout/activation_code_pop_up.xml
+++ b/app/src/main/res/layout/activation_code_pop_up.xml
@@ -139,13 +139,15 @@
 
     <Button
         android:id="@+id/confirm_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="60dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/curved_button_black"
+        android:textColor="#FFFFFF"
         android:text="confirm" />
 
 </LinearLayout>
