--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,7 +17,7 @@
             android:id="@+id/linearLayout6"
             android:layout_width="72dp"
             android:layout_height="72dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="40dp"
             android:background="@drawable/profile_picture"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,11 +71,233 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mail" />
         <LinearLayout
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-          android:layout_height="match_parent">
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="90dp">
+                <LinearLayout
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:background="@drawable/gradient">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#FFC700"
+                        android:textSize="30dp"
+                        android:text="1.2K"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14dp"
+                        android:text="Points"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="25dp"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:background="@drawable/gradient">
+                  <ImageView
+                      android:layout_width="match_parent"
+                      android:layout_height="48dp"
+                      android:src="@mipmap/caricon" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14dp"
+                        android:text="@string/Vehicles"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="25dp"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:background="@drawable/gradient">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:src="@mipmap/addresses" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14dp"
+                        android:text="Addresses"/>
+                </LinearLayout>
+            </LinearLayout>
+        <LinearLayout
+            android:paddingLeft="40dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="2dp">
+            <LinearLayout
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="54dp"
+                android:layout_height="2dp"
+                android:background="#333333">
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="1dp"
+                    android:background="#FFC700" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginLeft="60dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="54dp"
+                android:layout_height="2dp"
+                android:background="#333333">
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="1dp"
+                    android:background="#FFC700" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginLeft="60dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="54dp"
+                android:layout_height="2dp"
+                android:background="#333333">
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="1dp"
+                    android:background="#FFC700" />
+            </LinearLayout>
 
         </LinearLayout>
+        <Button
+            android:id="@+id/settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/curved_button_gray"
+            android:layout_marginTop="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginLeft="24dp"
+            android:gravity="center_vertical"
+            android:drawablePadding="16dp"
+            android:text="Settings"
+            android:textSize="14dp"
+            android:textColor="#FFFFFF"
+            android:drawableLeft="@mipmap/settings"
+            android:paddingLeft="24dp"
+            />
+
+        <Button
+            android:id="@+id/help"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="24dp"
+            android:background="@drawable/curved_button_gray"
+            android:drawableLeft="@mipmap/help"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dp"
+            android:text="Help &amp; Support"
+            android:textColor="#FFFFFF"
+            android:textSize="14dp"
+            />
+        <Button
+            android:id="@+id/faq"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="24dp"
+            android:background="@drawable/curved_button_gray"
+            android:drawableLeft="@mipmap/questions"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dp"
+            android:text="FAQ"
+            android:textColor="#FFFFFF"
+            android:textSize="14dp"
+           />
+        <Button
+            android:id="@+id/terms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="24dp"
+            android:background="@drawable/curved_button_gray"
+            android:drawableLeft="@mipmap/terms"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dp"
+            android:text="Terms &amp; conditions"
+            android:textColor="#FFFFFF"
+            android:textSize="14dp"
+            />
+        <Button
+            android:id="@+id/privacy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="24dp"
+            android:background="@drawable/curved_button_gray"
+            android:drawableLeft="@mipmap/privacy"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dp"
+            android:text="Privacy policy"
+            android:textColor="#FFFFFF"
+            android:textSize="14dp"
+           />
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="24dp"
+            android:background="@drawable/curved_button_gray"
+            android:drawableLeft="@mipmap/logout"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dp"
+            android:text="Logout"
+            android:textColor="#FFFFFF"
+            android:textSize="14dp"
+            />
+
+        <Button
+        android:id="@+id/invite_friends"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/curved_top_yellow_layout"
+        android:drawableLeft="@mipmap/envelope"
+        android:drawablePadding="16dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="29dp"
+        android:text="INVITE FRIENDS"
+        android:textColor="#1C1C1C"
+        android:textSize="16dp"
+        />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:paddingTop="16dp"
+            android:background="#FFC700"
+            android:drawablePadding="16dp"
+            android:gravity="top"
+            android:paddingLeft="29dp"
+            android:text=" "
+            android:textColor="#1C1C1C"
+            android:textSize="16dp"
+            />
+
+
     </LinearLayout>
 </ScrollView>
